--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,13 +1,13 @@
 name: defichaindart
 description: A dart DefiChain library for Flutter. BIP32, BIP39, P2PKH integration.
-version: 3.3.0
+version: 3.4.0+1
 homepage: https://github.com/DeFiCh-WalletApp/DeFiChain-dart
 
 environment:
   sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
-  bech32: ^0.2.1
+  defichain_bech32: ^0.1.0
   bip32_defichain: ^2.3.0
   pointycastle: ^3.1.3
   hex: ^0.2.0
