--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: defichaindart
 description: A dart DefiChain library for Flutter. BIP32, BIP39, P2PKH integration.
-version: 3.4.0+1
+version: 3.6.0
 homepage: https://github.com/DeFiCh-WalletApp/DeFiChain-dart
 
 environment:
@@ -8,8 +8,8 @@ environment:
 
 dependencies:
   defichain_bech32: ^0.1.0
-  bip32_defichain: ^2.3.0
-  pointycastle: ^3.1.3
+  bip32_defichain: ^3.0.0
+  pointycastle: ^3.3.4
   hex: ^0.2.0
   bs58check: ^1.0.2
   meta: ^1.3.0
@@ -19,3 +19,4 @@ dependencies:
 dev_dependencies:
   test: ^1.0.0
   pedantic: ^1.9.0
+  _fe_analyzer_shared: ^22.0.0
