--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: defichaindart
 description: A dart DefiChain library for Flutter. BIP32, BIP39, P2PKH integration.
-version: 3.6.0
+version: 3.6.0+1
 homepage: https://github.com/DeFiCh-WalletApp/DeFiChain-dart
 
 environment:
@@ -8,7 +8,7 @@ environment:
 
 dependencies:
   defichain_bech32: ^0.1.0
-  bip32_defichain: ^3.0.0
+  bip32_defichain: ^3.0.1+1
   pointycastle: ^3.3.4
   hex: ^0.2.0
   bs58check: ^1.0.2
