--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: defichaindart
 description: A dart DefiChain library for Flutter. BIP32, BIP39, P2PKH integration.
-version: 3.6.0+1
+version: 3.8.0-prerelease.8
 homepage: https://github.com/DeFiCh-WalletApp/DeFiChain-dart
 
 environment:
@@ -15,6 +15,7 @@ dependencies:
   meta: ^1.3.0
   crypto: ^3.0.1
   collection: ^1.15.0
+  convert: ^3.0.1
 
 dev_dependencies:
   test: ^1.0.0
